  constant data structures that cannot be conveniently represented as constant
  terms.
* Mutables can now be marked as thread-local, which can take on different
  values for each thread.
* Unicode characters can now be encoded in string literals using an
  escape sequence.

Changes to the Mercury standard library:

* We have moved some of the concurrency primitives out of the extras
  distribution and into a new standard library module called `thread'.

* The following predicates have been added to the list module:
	list.map_corresponding/4
	list.map2_foldl3/10
	list.map_corresponding_foldl/6
	list.map_corresponding_foldl2/8
	list.map_corresponding_foldl3/10
	list.map_corresponding3_foldl/7
	list.foldl3_corresponding/9
	list.foldl_corresponding3/6
	list.foldl2_corresponding3/8
	list.foldl3_corresponding3/10
	list.foldl4_corresponding3/12

   We have also added versions of list.foldl/4 and list.foldr/4 that have
   determinism multi.

* We have changed the interface of the ops module to make lookups of operators
  more efficient.

* We have added io.update_globals/3 which allows for atomic updates to
  the globals field in the I/O state in the presence of multiple threads.

* We have added string.c_pointer_to_string/{1,2} and string.from_c_pointer/1
  to convert c_pointers to a human readable form.

* We have changed term.variable so that it records the context where
  the variable was used.  This required the backward mode of
  term.var_list_to_term_list to be removed.  The backwards mode is
  now accessed via term.term_list_to_var_list.

* We have renamed some library predicates whose names were ambiguous.

* The type software_error/0 has been moved from the require module into
  the exception module.

* construct.num_functors/1 now fails rather than returning -1 for types
  with no functors.  There is a new function construct.det_num_functors/1
  which aborts for types which do not have functors.

* We have added predicates deconstruct.functor_number/3 and