@@ -1,7 +1,7 @@
 %-----------------------------------------------------------------------------%
 % vim: ft=mercury ts=4 sw=4 et
 %-----------------------------------------------------------------------------%
-% Copyright (C) 2000-2003, 2006 The University of Melbourne.
+% Copyright (C) 2000-2003, 2006-2007 The University of Melbourne.
 % This file may only be copied under the terms of the GNU Library General
 % Public License - see the file COPYING.LIB in the Mercury distribution.
 %-----------------------------------------------------------------------------%
@@ -29,8 +29,8 @@
 
 :- implementation.
 
-:- import_module mvar.
-:- import_module spawn.
+:- import_module thread.
+:- import_module thread.mvar.
 
 :- import_module bool.
 :- import_module list.
