@@ -1,12 +1,12 @@
 %-----------------------------------------------------------------------------%
 % vim: ft=mercury ts=4 sw=4 et
 %-----------------------------------------------------------------------------%
-% Copyright (C) 2000-2001, 2006 The University of Melbourne.
+% Copyright (C) 2000-2001, 2006-2007 The University of Melbourne.
 % This file may only be copied under the terms of the GNU Library General
-% Public License - see the file COPYING.LIB
+% Public License - see the file COPYING.LIB in the Mercury distribution.
 %-----------------------------------------------------------------------------%
 %
-% File: channel.m.
+% File: thread.channel.m.
 % Main author: petdr.
 % Stability: low.
 %
@@ -20,7 +20,7 @@
 %-----------------------------------------------------------------------------%
 %-----------------------------------------------------------------------------%
 
-:- module channel.
+:- module thread.channel.
 :- interface.
 
 :- import_module io.
@@ -57,7 +57,7 @@
 
 :- implementation.
 
-:- import_module mvar.
+:- import_module thread.mvar.
 
 %-----------------------------------------------------------------------------%
 
