@@ -154,7 +154,7 @@
 
   #define MR_SIGNAL(nothing)		do { } while (0)
   #define MR_BROADCAST(nothing)		do { } while (0)
-  #define MR_WAIT(no, thing)		do { } while (0)
+  #define MR_WAIT(no, thing)		(0)
 
   #define MR_OBTAIN_GLOBAL_LOCK(where)	do { } while (0)
   #define MR_RELEASE_GLOBAL_LOCK(where)	do { } while (0)
